--- a/index.html
+++ b/index.html
@@ -3,3 +3,11 @@ layout: home
 title: Arm website
 subtitle: This is where I will tell my friends way too much about me
 ---
+<br>
+<div class="text-center">
+  <h1>Welcome to our open site!</h1>
+  <h1>Help us to improve this site!</h1>
+  <br/>
+
+  <img src="{{ 'assets/img/sitelogo.png' | relative_url }}" alt="Site Logo" />
+</div>
