--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@ subtitle: This is where I will tell my friends way too much about me
   <h1>Help us to improve this site!</h1>
   <br/>
 
-  <img src="{{ 'assets/img/sitelogo.png' | relative_url }}" alt="Site Logo" />
+  <img src="{{ 'assets/img/sitelogo.png' | relative_url }}" alt="sitelogo" />
 </div>
