--- a/about.html
+++ b/about.html
@@ -10,10 +10,10 @@ permalink: /about/
             <img class="img-responsive" src="{{ "/assets/img/about.jpg" | prepend: site.baseurl }}" alt="">
         </div>
         <div class="col-lg-6">
-            <h4>More About Our Agency.</h4>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
-            <p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-            <p>Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
+            <h4>More About ZuhaWorld</h4>
+            <p>ZuhaWorld Social Impact is always one step ahead of the competition. They defined what it means to be an innovator by establishing social responsibility. </p>
+            <p>We are the most popular social club in Muradpur, Dhaka. We began our journey in 2011 with the slogan, “Maybe you have no friend in your world, but here is ZuhaWorld, who is always ready to say welcome.” We believe in creating a culture of information sharing and constant learning. We bring together local ingenuity and global insights to save lives, advance equity, and secure strong futures. </p>
+            <p><strong>M. A. Zuha</strong> is a writer and photographer from Dhaka, Bangladesh. He serves as the CEO of the ZuhaWorld Org. Furthermore, he loves to learn and committed to lifelong learning and development. </p>
             <p><br/><a href="{{ "/contact/" | prepend: site.baseurl }}" class="btn btn-theme">Contact Us</a></p>
         </div>
     </div><!--/row -->
