--- a/index.html
+++ b/index.html
@@ -1,13 +1,5 @@
 ---
 layout: home
-title: MAZ website
-subtitle: This is where I will tell my friends way too much about me
+title: M A Zuha
+subtitle: Hi, M A zuha is here.
 ---
-<br>
-<div class="text-center">
-  <h1>Welcome to our open site!</h1>
-  <p>Help us to improve this site!</p>
-  <br/>
-
-  <img src="{{ 'assets/img/sitelogo.jpg' | relative_url }}" alt="Site Logo" />
-</div>
