--- a/about.html
+++ b/about.html
@@ -3,18 +3,23 @@ layout: about
 title: About
 permalink: /about/
 ---
+<p><a href="https://armandsl.github.io/">Home</a> | <a href="https://armandsl.github.io/about">About</a> | <a href="https://armandsl.github.io/contact">Contact</a></p>
 
 <div class="container mtb">
     <div class="row">
         <div class="col-lg-6">
-            <img class="img-responsive" src="{{ "/assets/img/about.jpg" | prepend: site.baseurl }}" alt="">
+            <img class="img-responsive" src="{{ "/assets/img/about.jpg" | prepend: site.baseurl }}" alt="About Image">
         </div>
         <div class="col-lg-6">
-            <h4>More About ZuhaWorld</h4>
+            <h2>About M A Zuha</h2>
+            <p><strong>M A Zuha</strong> is a writer and photographer from Dhaka, Bangladesh. He serves as the CEO of the ZuhaWorld Social Impact. Furthermore, he loves to learn and committed to lifelong learning and development. </p>
+
+            <h2>A Little Introduction About ZuhaWorld Social Impact</h2>
+
             <p>ZuhaWorld Social Impact is always one step ahead of the competition. They defined what it means to be an innovator by establishing social responsibility. </p>
             <p>We are the most popular social club in Muradpur, Dhaka. We began our journey in 2011 with the slogan, “Maybe you have no friend in your world, but here is ZuhaWorld, who is always ready to say welcome.” We believe in creating a culture of information sharing and constant learning. We bring together local ingenuity and global insights to save lives, advance equity, and secure strong futures. </p>
-            <p><strong>M. A. Zuha</strong> is a writer and photographer from Dhaka, Bangladesh. He serves as the CEO of the ZuhaWorld Org. Furthermore, he loves to learn and committed to lifelong learning and development. </p>
             <p><br/><a href="{{ "/contact/" | prepend: site.baseurl }}" class="btn btn-theme">Contact Us</a></p>
         </div>
-    </div><!--/row -->
-</div><!--/container -->
+      <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
+        This site is open source. <a href="https://github.com/armandsl/armandsl.github.io/edit/main/index.md">Improve this page</a>.
+      </div>
