--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@ layout: home
 title: M A Zuha
 subtitle: This is where I will tell my friends way too much about me
 ---
+<p><a href="https://armandsl.github.io/">Home</a> | <a href="https://armandsl.github.io/about">About</a> | <a href="https://armandsl.github.io/contact">Contact</a> | <a href="https://armandsl.github.io/blog">Blog</a> | <a href="https://armandsl.github.io/aboutme.html">About Me</a></p>
+
 <br>
 <div class="text-center">
-  <h1>Welcome to our open site!</h1>
-  <p>Help us to improve this site!</p>
+  <h2>Welcome to my GitHub profile home!</h2>
+  <p>M A Zuha profile site is used a Jekyll theme for GitHub Pages.Help us to improve this site!</p>
   <br/>
 
-  <img src="{{ 'assets/img/avatar-icon.png' | relative_url }}" alt="Site Icon" />
+  <img src="{{ 'assets/img/home.png' | relative_url }}" alt="Home Image" />
 </div>
