--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@ layout: contact
 title: Contact
 permalink: /contact/
 ---
+<p><a href="https://armandsl.github.io/">Home</a> | <a href="https://armandsl.github.io/about">About</a> | <a href="https://armandsl.github.io/contact">Contact</a> | <a href="https://armandsl.github.io/blog">Blog</a> | <a href="https://armandsl.github.io/aboutme.html">About Me</a></p>
 
 <div id="contactwrap"></div>
 
