--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 title: M A Zuha
 subtitle: This is where I will tell my friends way too much about me
 ---
-<p><a href="https://armandsl.github.io/">Home</a> | <a href="https://armandsl.github.io/about">About</a> | <a href="https://armandsl.github.io/contact">Contact</a> | <a href="https://armandsl.github.io/blog">Blog</a> | <a href="https://armandsl.github.io/aboutme.html">About Me</a></p>
+<p><a href="https://armandsl.github.io/">Home</a> | <a href="https://armandsl.github.io/about">About</a> | <a href="https://armandsl.github.io/contact">Contact</a> | <a href="https://armandsl.github.io/blog">Blog</a> | <a href="https://armandsl.github.io/aboutme.html">About Me</a> | <a href="https://armandsl.github.io/category">Category</a </p>
 
 <br>
 <div class="text-center">
