--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,12 @@ permalink: /contact/
 ---
 <p><a href="https://armandsl.github.io/">Home</a> | <a href="https://armandsl.github.io/about">About</a> | <a href="https://armandsl.github.io/contact">Contact</a> | <a href="https://armandsl.github.io/blog">Blog</a> | <a href="https://armandsl.github.io/aboutme.html">About Me</a> | <a href="https://armandsl.github.io/category">Category</a </p>
 
+<div class="container mtb">
+    <div class="row">
+        <div class="col-lg-6">
+            <img class="img-responsive" src="{{ "/assets/img/contact.jpg" | prepend: site.baseurl }}" alt="Contact Image">
+        </div>
+
 <div id="contactwrap"></div>
 
 <div class="container mtb">
