--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,12 @@ permalink: /blog/
 
 <div class="container mtb">
     <div class="row">
+        <div class="col-lg-6">
+            <img class="img-responsive" src="{{ "/assets/img/blog-image.png" | prepend: site.baseurl }}" alt="Blog Image">
+        </div>
+
+<div class="container mtb">
+    <div class="row">
 
         <!-- BLOG POSTS LIST -->
         <div class="col-lg-8">
