--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
 
 <!-- end custom head snippets -->
 
+        <ul class="downloads">
+          <li><a href="https://github.com/armandsl/armandsl.github.io/zipball/main">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/armandsl/armandsl.github.io/tarball/main">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/armandsl/armandsl.github.io">View On <strong>GitHub</strong></a></li>
+        </ul>
+
   </head>
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
