--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ YouTube Channel: <a href="https://www.youtube.com/@zuhaworld">ZuhaWorld Social I
 <h2 id="download">Download</h2>
 <p>Templates often rely on URLs supplied by GitHub such as links to your repository or links to download your project.
 github:
-  <a href="https://armndsl.github.io/download.zip">Download</a></p>
+  <a href="https://github.com/armndsl/armandsl.github.io/zipball/main">Download</a></p>
 
 
       
