--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,8 @@ permalink: /blog/
             <img class="img-responsive" src="{{ "/assets/img/blog-image.png" | prepend: site.baseurl }}" alt="Blog Image">
         </div>
 
+  <h2>Blog Posts</h2>
+
 <div class="container mtb">
     <div class="row">
 
