--- a/category.html
+++ b/category.html
@@ -1,9 +1,9 @@
 ---
-layout: blog
+layout: category
 title: Categories
 permalink: /category/
 ---
-<p><a href="https://armandsl.github.io/">Home</a> | <a href="https://armandsl.github.io/about">About</a> | <a href="https://armandsl.github.io/contact">Contact</a> | <a href="https://armandsl.github.io/blog">Blog</a> | <a href="https://armandsl.github.io/aboutme.html">About Me</a> | <a href="https://armandsl.github.io/category">Category</a </p>
+<p><a href="https://armandsl.github.io/">Home</a> | <a href="https://armandsl.github.io/about">About</a> | <a href="https://armandsl.github.io/contact">Contact</a> | <a href="https://armandsl.github.io/blog">Blog</a> | <a href="https://armandsl.github.io/aboutme.html">About Me</a> | <a href="https://armandsl.github.io/category">Category</a> </p>
 
 <div class="container mtb">
     <div class="row">
