--- a/blog.html
+++ b/blog.html
@@ -31,3 +31,7 @@ permalink: /blog/
 
     </div><!--/row -->
 </div><!--/container -->
+
+      <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
+        This site is open source. <a href="https://github.com/armandsl/armandsl.github.io/edit/main/index.md">Improve this page</a>.
+      </div>
