--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 ---
-layout: contact
+layout: default
 title: Contact
 permalink: /contact/
 ---
@@ -8,7 +8,7 @@ permalink: /contact/
 <div class="container mtb">
     <div class="row">
         <div class="col-lg-6">
-            <img class="img-responsive" src="{{ "/assets/img/contact.jpg" | prepend: site.baseurl }}" alt="Contact Image">
+            <img class="img-responsive" src="{{ "/assets/img/contact-image.png" | prepend: site.baseurl }}" alt="Contact Image">
         </div>
 
 <div id="contactwrap"></div>
@@ -16,7 +16,11 @@ permalink: /contact/
 <div class="container mtb">
     <div class="row">
         <div class="col-lg-8">
-            <h4>Just Get In Touch!</h4>
+            <h2>Contact Us Anytime</h2>
+            <p>Hearing from you always makes us happy. Therefore, please do not hesitate to contact us at any moment. You can also let us know if you have any recommendations.</p>
+
+            <h4>Get In Touch!</h4>
+            <p>Have questions?<br>Feel free to communicate with us. Our support team is always ready to provide you full support.</p>
             <div class="hline"></div>
                 <p>{{ site.about }}</p>
                 <form role="form">
@@ -52,7 +56,11 @@ permalink: /contact/
                     Email: {{ site.email }}<br/>
                     Tel: {{ site.tel }}
                 </p>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                <p>By submitting your information, you’re giving us permission to email you. You may unsubscribe at any time.</p>
         </div>
     </div><!--/row -->
 </div><!--/container -->
+
+      <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
+        This site is open source. <a href="https://github.com/armandsl/armandsl.github.io/edit/main/index.md">Improve this page</a>.
+      </div>
