--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 ---
-layout: about
+layout: default
 title: About
 permalink: /about/
 ---
@@ -8,7 +8,7 @@ permalink: /about/
 <div class="container mtb">
     <div class="row">
         <div class="col-lg-6">
-            <img class="img-responsive" src="{{ "/assets/img/about.jpg" | prepend: site.baseurl }}" alt="About Image">
+            <img class="img-responsive" src="{{ "/assets/img/image-about-me.jpg" | prepend: site.baseurl }}" alt="Image About Me">
         </div>
         <div class="col-lg-6">
             <h2>About M A Zuha</h2>
