--- a/category.html
+++ b/category.html
@@ -7,6 +7,14 @@ permalink: /category/
 
 <div class="container mtb">
     <div class="row">
+        <div class="col-lg-6">
+            <img class="img-responsive" src="{{ "/assets/img/category-image.png" | prepend: site.baseurl }}" alt="Category Image">
+        </div>
+    </div>
+</div><!--/container -->
+
+<div class="container mtb">
+    <div class="row">
         <div class="col-lg-8">
 
         <!-- BLOG POSTS LIST -->
