--- a/about.html
+++ b/about.html
@@ -21,5 +21,5 @@ permalink: /about/
             <p><br/><a href="{{ "/contact/" | prepend: site.baseurl }}" class="btn btn-theme">Contact Us</a></p>
         </div>
       <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
-        This site is open source. <a href="https://github.com/armandsl/armandsl.github.io/edit/main/index.md">Improve this page</a>.
+      <p><small>This site is open source. <a href="https://github.com/armandsl/armandsl.github.io/edit/main/index.md">Improve this page</a>.</small></p>
       </div>
