--- a/_layouts /default.html
+++ b/_layouts /default.html
@@ -48,7 +48,7 @@
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
-        <p><small>This site is open source. <a href="https://github.com/armandsl/armandsl.github.io/edit/main/index.md">Improve this page</a>.</small></p>
+        This site is open source. <a href="https://github.com/armandsl/armandsl.github.io/edit/main/index.md">Improve this page</a>.
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/armandsl">M A Zuha</a></small></p>
       </footer>
     </div>
