--- a/404.html
+++ b/404.html
@@ -6,8 +6,9 @@ permalink: /404.html
 
 <div class="text-center">
   <h1>Whoops, this page doesn't exist.</h1>
-  <h1>Move along. (404 error)</h1>
+  <h2>Move along. (404 error)</h2>
   <br/>
+  <p><a href="https://armandsl.github.io/">Back to Home</a></p>
 
   <img src="{{ 'assets/img/404.jpg' | relative_url }}" alt="Not found" />
 </div>
