--- a/assets/img/404.html
+++ b/assets/img/404.html
@@ -5,8 +5,8 @@ permalink: /404.html
 ---
 
 <div class="text-center">
-  <h1>Whoops, this page doesn't exist.</h1>
-  <h2>Move along. (404 error)</h2>
+  <h2>Whoops, This page doesn't exist.</h2>
+  <h3>Move along. There's nothing to see here.</h3>
   <br/>
   <p><a href="https://armandsl.github.io/">Back to Home</a></p>
 
