--- a/legal.html
+++ b/legal.html
@@ -8,7 +8,7 @@ permalink: /legal/
 <div class="container mtb">
     <div class="row">
         <div class="col-lg-6">
-            <img class="img-responsive" src="{{ "/assets/img/image-about-me.jpg" | prepend: site.baseurl }}" alt="Image About Me">
+            <img class="img-responsive" src="{{ "/assets/img/legal-notice-image.jpg" | prepend: site.baseurl }}" alt="Legal Notice Image">
         </div>
         <div class="col-lg-6">
             <h2>Legal Notic</h2>
